--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 lib_deps = 
 	blynkkk/Blynk@^1.0.0
 	sparkfun/SparkFun BME280@^2.0.9
+	milesburton/DallasTemperature@^3.9.1
+	4-20ma/ModbusMaster@^2.0.1
 monitor_speed = 115200
 upload_speed = 2000000
