--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,18 @@
 
 [env:d1_mini]
 platform = espressif8266
-board = d1_mini
+board = nodemcuv2
 framework = arduino
-lib_deps = 
-	blynkkk/Blynk@^1.0.0
+platform_packages = 
+	platformio/framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+lib_deps =
+    blynkkk/Blynk@1.1.0
+    jandrassy/ArduinoOTA@^1.0.9
 	sparkfun/SparkFun BME280@^2.0.9
 	milesburton/DallasTemperature@^3.9.1
 	4-20ma/ModbusMaster@^2.0.1
 monitor_speed = 115200
 upload_speed = 2000000
+build_flags =
+    -DNO_GLOBAL_BLYNK=1
+    -DBLYNK_TIMEOUT_MS=6000
